finetuning save, my_stgcnpp editting
파인튜닝 중간 저장
현재 my_stgcnpp에 정규화, test 성능 향상을 위한 각종 에드온 더하는 중

--- a/golf/mmAction2_finetune/legacy/pkl_analysis.ipynb
+++ b/golf/mmAction2_finetune/legacy/pkl_analysis.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 1,
    "id": "02a3a783",
    "metadata": {},
    "outputs": [
@@ -10,7 +10,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "combined_5class_test.pkl: annotations 개수 = 1115\n"
+      "combined_3class.pkl: annotations 개수 = 4949\n"
      ]
     }
    ],
@@ -29,13 +29,13 @@
     "\n",
     "# 사용 예시 (파일명만 전달해도 동작)\n",
     "\n",
-    "PKL = \"combined_5class_test.pkl\"\n",
+    "PKL = \"combined_3class.pkl\"\n",
     "check_pkl_annotations([PKL])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 2,
    "id": "5a82b06f",
    "metadata": {},
    "outputs": [
@@ -103,7 +103,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 3,
    "id": "c1ffc400",
    "metadata": {},
    "outputs": [
@@ -111,7 +111,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'frame_dir': 'false/bad/20201210_General_112_DOC_A_M20_MM_001_person01_crop', 'label': 1, 'keypoint': array([[[[0.10651094, 0.15757778],\n",
+      "{'frame_dir': 'false/bad/20201210_General_112_DOC_A_M20_MM_001_person01_crop', 'label': 0, 'keypoint': array([[[[0.10651094, 0.15757778],\n",
       "         [0.11213385, 0.15036297],\n",
       "         [0.10164948, 0.14894167],\n",
       "         ...,\n",
@@ -214,7 +214,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 3,
    "id": "47055816",
    "metadata": {},
    "outputs": [
@@ -222,37 +222,47 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "라벨 값 분포: {'0': 48, '1': 51, '2': 491, '3': 51, '4': 474}\n"
+      "Overall label distribution: {0: 1362, 2: 2431, 1: 1156}\n",
+      "xsub_train: total=4455, label_counts={0: 1213, 2: 2208, 1: 1034}\n",
+      "xsub_val: total=494, label_counts={1: 122, 2: 223, 0: 149}\n"
      ]
     }
    ],
    "source": [
     "import pickle\n",
+    "from collections import Counter\n",
     "\n",
     "def check_label_range(pkl_path):\n",
+    "    \"\"\"Print overall and per-split label distributions for a MMACTION2 PKL.\"\"\"\n",
     "    with open(pkl_path, 'rb') as f:\n",
     "        data = pickle.load(f)\n",
-    "    labels = [a['label'] for a in data['annotations']]\n",
-    "    labels_count = {\"0\":0, \"1\":0, \"2\":0, \"3\":0, \"4\":0}\n",
-    "    for label in labels:\n",
-    "        if label == 0:\n",
-    "            labels_count[\"0\"] += 1\n",
-    "        elif label == 1:\n",
-    "            labels_count[\"1\"] += 1\n",
-    "        elif label == 2:\n",
-    "            labels_count[\"2\"] += 1\n",
-    "        elif label == 3:\n",
-    "            labels_count[\"3\"] += 1\n",
-    "        elif label == 4:\n",
-    "            labels_count[\"4\"] += 1\n",
-    "    print('라벨 값 분포:', labels_count)\n",
     "\n",
+    "    anns = data.get('annotations', [])\n",
+    "    # map frame_dir -> label for quick lookup (split lists reference frame_dir)\n",
+    "    frame_to_label = {a.get('frame_dir'): a.get('label') for a in anns}\n",
+    "\n",
+    "    # Overall distribution\n",
+    "    overall = Counter([a.get('label') for a in anns])\n",
+    "    print('Overall label distribution:', dict(overall))\n",
+    "\n",
+    "    # Per-split distributions (e.g., xsub_train, xsub_val)\n",
+    "    splits = data.get('split', {})\n",
+    "    if not splits:\n",
+    "        print('No split information found in PKL.')\n",
+    "        return\n",
+    "\n",
+    "    for split_name, frame_list in splits.items():\n",
+    "        labels = [frame_to_label.get(fd) for fd in frame_list if frame_to_label.get(fd) is not None]\n",
+    "        cnt = Counter(labels)\n",
+    "        print(f\"{split_name}: total={len(frame_list)}, label_counts={dict(cnt)}\")\n",
+    "\n",
+    "# Run the check (ensure PKL variable is set in the notebook)\n",
     "check_label_range(PKL)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 5,
    "id": "2331b394",
    "metadata": {},
    "outputs": [
@@ -280,7 +290,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 6,
    "id": "8795e90b",
    "metadata": {},
    "outputs": [],
